chore(version) Use project.version and remove deprecated sonar conf (#238)
* useproject.version 
* remove deprecated sonar conf
* remove guava Predicates
* remove MaxPermSize from VM args