@@ -13,7 +13,7 @@
     <packaging>eclipse-test-plugin</packaging>
 
     <properties>
-        <javaOPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=640m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=TestSuite.hprof</javaOPTS>
+        <javaOPTS>-Xms512m -Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=TestSuite.hprof</javaOPTS>
         <additionalArgs>-Dorg.eclipse.swt.browser.DefaultType=mozilla -Dbonita.noregister=1 -Dbonita.noExpireWarning=1 -Declipse.log.level=${tests.log.level} -Dosgi.nls.warnings=ignore</additionalArgs>
     </properties>
 
@@ -77,7 +77,7 @@
                     <includes>
                         <include>**/AllTests.java</include>
                     </includes>
-                    <argLine>${tycho.testArgLine} ${javaOPTS} -Dbonita.client.home=${license.dir} ${additionalArgs}</argLine>
+                    <argLine>${javaOPTS} -Dbonita.client.home=${license.dir} ${additionalArgs}</argLine>
                     <appArgLine>-nl en -clean</appArgLine>
                     <osgiDataDirectory>${project.parent.basedir}/lé test</osgiDataDirectory>
                     <bundleStartLevel>
@@ -87,14 +87,6 @@
                             <autoStart>true</autoStart>
                         </bundle>
                     </bundleStartLevel>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <configuration>
-                    <append>false</append><!-- It works because we have a single test suite in this module and it is the first one to be executed everytime. -->
                 </configuration>
             </plugin>
         </plugins>
